Update the book

--- a/bookdown-demo.tex
+++ b/bookdown-demo.tex
@@ -356,6 +356,12 @@ directory. What is a directory? It is essentially the folder we will be
 using to read in files, or export files into. In this directory, we have
 our data set of interest, \texttt{Topgown\_Data}
 
+\begin{Shaded}
+\begin{Highlighting}[]
+\KeywordTok{setwd}\NormalTok{(}\StringTok{"C:/Users/alexs/Documents/GitHub/EMaC_Rmanual"}\NormalTok{)}
+\end{Highlighting}
+\end{Shaded}
+
 \subsection{Reading in Data}\label{reading-in-data}
 
 Now that we have our working directory set we can use the
@@ -1740,7 +1746,7 @@ word frequency.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-19-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-20-1.pdf}
 
 \begin{longtable}[]{@{}cc@{}}
 \toprule
@@ -1803,7 +1809,7 @@ function in \texttt{ggplot}.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-20-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-21-1.pdf}
 
 \subsection{Example: Density Grammar}\label{example-density-grammar}
 
@@ -1838,7 +1844,7 @@ the last code's output and this code's output
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-21-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-22-1.pdf}
 
 \section{Plotting: Experimental
 Analysis}\label{plotting-experimental-analysis}
@@ -1871,7 +1877,7 @@ task across visual field. Here is an example.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-22-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-23-1.pdf}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -1898,7 +1904,7 @@ Here is an example.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-23-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-24-1.pdf}
 
 \subsection{Plotting Levels of Multiple Categorical
 Variables}\label{plotting-levels-of-multiple-categorical-variables}
@@ -1923,7 +1929,7 @@ factors: visual field and sentence constraint.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-24-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-25-1.pdf}
 Does this graph test for this hypothesis well? It is a little difficult
 to tell. Can we think of a better way to represent this? Maybe we can
 try to plot sentence constraint on the x-axis and our color be visual
@@ -1941,7 +1947,7 @@ field.
 \end{Highlighting}
 \end{Shaded}
 
-\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-25-1.pdf}
+\includegraphics{bookdown-demo_files/figure-latex/unnamed-chunk-26-1.pdf}
 
 \bibliography{book.bib,packages.bib}
 
